Curso de MacOS MTWDM
Curso de MacOS MTWDM

--- a/App6mtwdm/App6mtwdm/Info.plist
+++ b/App6mtwdm/App6mtwdm/Info.plist
@@ -33,5 +33,9 @@
 	<string>Main</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
+	<key>CFBundleDisplayName</key>
+	<string></string>
 </dict>
 </plist>
